Project will now build